# 1st_order_logic

./: Dockerfile  README.md  example.txt  flake.nix  fourmolu.yaml  hls.json  prop-solveur.cabal  stack.yaml
.github/workflows/: cachix.yml
app/: Main.hs  Web.hs
nix/: overlays.nix
src/: Parser.hs  Solver.hs  Types.hs
test/: ParserSpec.hs  Spec.hs
