cabal-version:      3.0
name:               prop-solveur
version:            0.1.0.0
author:             Léana 江
maintainer:         leana.jiang@icloud.com
extra-source-files: README.md

common common
  default-language:   GHC2021
  ghc-options:        -Wall -Wextra
  build-depends:
    , base           ^>=4.17
    , containers     ^>=0.6
    , megaparsec     ^>=9.3.1
    , pretty-simple  ^>=4.1.2.0
    , text           ^>=2.0.2

  default-extensions: BlockArguments

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Parser
    Solver
    Types

executable prop-solveur
  import:        common
  main-is:       app/Main.hs
  build-depends:
    , ansi-terminal         ^>=0.11.5
    , optparse-applicative  ^>=0.17.1.0
    , prop-solveur

test-suite prop-solveur-spec
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  ParserSpec
  build-depends:
    , hspec         >=2.10.10
    , prop-solveur
    , QuickCheck    >=2.14.3
