cabal-version:      3.0
name:               prop-solveur
version:            0.1.0.0
author:             Léana 江
maintainer:         leana.jiang@icloud.com
extra-source-files: README.md

common common
  default-language:   GHC2021
  ghc-options:        -Wall -Wextra
  build-depends:
    , base
    , containers
    , megaparsec
    , pretty-simple
    , text

  default-extensions: BlockArguments

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Parser
    Solver
    Types

executable prop-solveur
  import:        common
  main-is:       app/Main.hs
  build-depends:
    , ansi-terminal
    , haskeline
    , optparse-applicative
    , prop-solveur

executable prop-solveur-web
  import:  common
  main-is: app/Web.hs
  build-depends:
    , servant
    , servant-server
    , wai
    , warp
    , aeson
    , prop-solveur
    , wai-cors

test-suite prop-solveur-spec
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  ParserSpec
  build-depends:
    , hspec
    , prop-solveur
    , QuickCheck
